# Nova

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  premake5.lua
EditorScript/: CMakeLists.txt
EditorScript/src/: EditorScript.cs
Nova/: CMakeLists.txt  pch.hpp  premake5.lua
Nova/assets/: Nova.runtimeconfig.json
Nova/assets/shaders/: basic.frag  basic.vert  deferredGeometry.frag  deferredGeometry.vert  deferredLighting.frag  deferredLighting.vert  deferredTransparent.frag
Nova/include/Nova/assets/: Model.hpp
Nova/include/Nova/core/: Application.hpp  Build.hpp  Event.hpp  File.hpp  Layer.hpp  Memory.hpp  Utility.hpp  application.h  arena.h  build.h  config.h  exception.h  file.h  loader.h  memory.h  path.h  string.h  time.h
Nova/include/Nova/debug/: Log.hpp  Profile.hpp
Nova/include/Nova/dotnet/: Assembly.hpp  AssemblyInfo.hpp  DotnetMemory.hpp  DotnetObject.hpp  DotnetSettings.hpp  Host.hpp  Memory.hpp  String.hpp  Type.hpp  TypeInfo.hpp  assembly.h  host.h  managed_functions.h
Nova/include/Nova/dotnet/interop/: interop_memory.h  interop_string.h
Nova/include/Nova/ecs/components/: CameraComponent.hpp  LightComponent.hpp  RenderComponent.hpp  ScriptComponent.hpp  ScriptController.hpp
Nova/include/Nova/graphics/: Material.hpp  Rect.hpp  Renderer.hpp  RendererSettings.hpp  ShaderCache.hpp  Window.hpp  renderer.h  window.h
Nova/include/Nova/graphics/opengl/: AlignedType.hpp  Buffer.hpp  BufferView.hpp  Framebuffer.hpp  GL.hpp  GLObject.hpp  ID.hpp  PersistentMappedBuffer.cpp  PersistentMappedBuffer.hpp  ShaderProgram.hpp  ShaderStage.hpp  Sync.hpp  Texture.hpp  VertexArray.hpp  VertexDescriptor.hpp
Nova/include/Nova/graphics/vulkan/: instance.h  surface.h
Nova/include/Nova/input/: Button.hpp  Input.hpp  Key.hpp  Modifier.hpp
Nova/include/Nova/io/: file.h  stream.h
Nova/include/Nova/memory/: Arena.hpp
Nova/include/Nova/platform/: Platform.hpp  platform.h
Nova/include/Nova/platform/windows/: StartupData.hpp  WindowData.hpp  core.h  startupData.h  windowData.h
Nova/include/Nova/serialization/: json.h
Nova/src/core/: Application.cpp  Arena.cpp  File.cpp  Layer.cpp  application.c  arena.c  config.c  exception.c  file.c  memory.c  string.c  time.c
Nova/src/debug/: Log.cpp  Profile.cpp
Nova/src/dotnet/: Assembly.cpp  DotnetMemory.cpp  DotnetType.cpp  Host.cpp  host.c
Nova/src/dotnet/interop/: interop_string.c
Nova/src/graphics/: Buffer.cpp  Framebuffer.cpp  GLObject.cpp  PersistentMappedBuffer.cpp  Renderer.cpp  ShaderCache.cpp  ShaderProgram.cpp  ShaderStage.cpp  Sync.cpp  Texture.cpp  VertexArray.cpp  VertexDescriptor.cpp  Window.cpp  _Renderer.cpp  renderer.c
Nova/src/graphics/vulkan/: instance.c
Nova/src/input/: Input.cpp
Nova/src/io/: file.c  stream.c
Nova/src/platform/windows/: config.c  core.c  dll.c  file.c  interop_memory.c  memory.c  path.c  string.c  surface.c  time.c  window.c
Nova/src/serialization/: json.c
NovaEditor/: CMakeLists.txt  premake5.lua
NovaEditor/src/: Camera.cpp  Camera.hpp  CameraController.hpp  MainLayer.cpp  MainLayer.hpp  OverlayLayer.cpp  OverlayLayer.hpp  main.c  main.cpp
NovaEditor/src/components/: NameComponent.hpp  TransformComponent.hpp
NovaHost/: CMakeLists.txt  premake5.lua
NovaHost/src/NovaHost/: AssemblyInfo.cs  AssemblyLoader.cs  AssemblyType.cs  ExceptionHelper.cs  GarbageCollector.cs  ManagedHost.cs  ObjectCache.cs  TypeInterface.cs
NovaHost/src/NovaHost/Interop/: Accessibility.cs  Marshalling.cs  NativeArray.cs  NativeAssembly.cs  NativeBool.cs  NativeMethodInfo.cs  NativePropertyInfo.cs  NativeString.cs  NativeType.cs
NovaScript/: premake5.lua
NovaScript/src/: Input.cs
NovaScript/src/Graphics/: Window.cs
